finishing up the final project

--- a/projects/final-projects/02-experiment-writeup/WriteUp.ipynb
+++ b/projects/final-projects/02-experiment-writeup/WriteUp.ipynb
@@ -42,7 +42,7 @@
     "  * There are differences between demographics and grit/big 5 personality traits.\n",
     "  * Grit is predictable from demographic features and big 5 personality traits.\n",
     "* What data do you not have access to but wish you had?\n",
-    "  * I wish IQ was added to this dataset.\n",
+    "  * I wish IQ was added to this dataset, as well as political leaning and success.\n",
     "* What is already implied about the observations in your data set? For example, if your primary data set is twitter data, it may not be representative of the whole sample (say, predicting who would win an election)\n",
     "  * Surveys do not accuratly observe people.\n",
     "  * The grit questions have some flaws (takers would rather talk about the answer rather than be put in a box).\n",
