--- a/lessons/lesson-16/code/starter-code/starter-code-16.ipynb
+++ b/lessons/lesson-16/code/starter-code/starter-code-16.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3"
@@ -35,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.connect('dat-test.db')"
@@ -62,14 +58,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -179,9 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data.to_sql('rossmann_sales',\n",
@@ -193,14 +198,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -404,9 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO"
@@ -422,9 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO"
@@ -440,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO"
@@ -460,6 +470,460 @@
     "1. Select the store, date and weekly sales and temperature\n",
     "1. What were average sales on holiday vs. non-holiday sales\n",
     "1. What were average sales on holiday vs. non-holiday sales when the temperature was below 32 degrees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Store  Dept        Date  Weekly_Sales  IsHoliday\n",
+      "0      1     1  2010-02-05      24924.50      False\n",
+      "1      1     1  2010-02-12      46039.49       True\n",
+      "2      1     1  2010-02-19      41595.55      False\n",
+      "3      1     1  2010-02-26      19403.54      False\n",
+      "4      1     1  2010-03-05      21827.90      False\n",
+      "   Store        Date  Temperature  Fuel_Price  MarkDown1  MarkDown2  \\\n",
+      "0      1  2010-02-05        42.31       2.572        NaN        NaN   \n",
+      "1      1  2010-02-12        38.51       2.548        NaN        NaN   \n",
+      "2      1  2010-02-19        39.93       2.514        NaN        NaN   \n",
+      "3      1  2010-02-26        46.63       2.561        NaN        NaN   \n",
+      "4      1  2010-03-05        46.50       2.625        NaN        NaN   \n",
+      "\n",
+      "   MarkDown3  MarkDown4  MarkDown5         CPI  Unemployment  IsHoliday  \n",
+      "0        NaN        NaN        NaN  211.096358         8.106      False  \n",
+      "1        NaN        NaN        NaN  211.242170         8.106       True  \n",
+      "2        NaN        NaN        NaN  211.289143         8.106      False  \n",
+      "3        NaN        NaN        NaN  211.319643         8.106      False  \n",
+      "4        NaN        NaN        NaN  211.350143         8.106      False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "walmart_sales = pd.read_csv('../../assets/dataset/walmart-sales.csv')\n",
+    "print walmart_sales.head()\n",
+    "\n",
+    "walmart_feat = pd.read_csv('../../assets/dataset/features.csv')\n",
+    "print walmart_feat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "connW = sqlite3.connect('wm.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "walmart_sales.to_sql('wm_sales',\n",
+    "            con=connW,\n",
+    "            if_exists='replace',\n",
+    "            index=False)\n",
+    "walmart_feat.to_sql('wm_feat',\n",
+    "            con=connW,\n",
+    "            if_exists='replace',\n",
+    "            index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2011-08-05</td>\n",
+       "      <td>3.684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2011-08-12</td>\n",
+       "      <td>3.638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2011-07-29</td>\n",
+       "      <td>3.682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2011-08-05</td>\n",
+       "      <td>3.684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2011-08-12</td>\n",
+       "      <td>3.638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2011-08-26</td>\n",
+       "      <td>3.523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2012-08-03</td>\n",
+       "      <td>3.417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2011-08-05</td>\n",
+       "      <td>3.684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2011-08-12</td>\n",
+       "      <td>3.638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2011-09-02</td>\n",
+       "      <td>3.533</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store        Date  Fuel_Price\n",
+       "0      1  2011-08-05       3.684\n",
+       "1      1  2011-08-12       3.638\n",
+       "2      2  2011-07-29       3.682\n",
+       "3      2  2011-08-05       3.684\n",
+       "4      2  2011-08-12       3.638\n",
+       "5      2  2011-08-26       3.523\n",
+       "6      2  2012-08-03       3.417\n",
+       "7      5  2011-08-05       3.684\n",
+       "8      5  2011-08-12       3.638\n",
+       "9      5  2011-09-02       3.533"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql.read_sql('select Store, Date, Fuel_Price from wm_feat where Temperature > 90 limit 10', con=connW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>42.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-12</td>\n",
+       "      <td>46039.49</td>\n",
+       "      <td>38.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-19</td>\n",
+       "      <td>41595.55</td>\n",
+       "      <td>39.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-26</td>\n",
+       "      <td>19403.54</td>\n",
+       "      <td>46.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-05</td>\n",
+       "      <td>21827.90</td>\n",
+       "      <td>46.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-12</td>\n",
+       "      <td>21043.39</td>\n",
+       "      <td>57.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-19</td>\n",
+       "      <td>22136.64</td>\n",
+       "      <td>54.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-26</td>\n",
+       "      <td>26229.21</td>\n",
+       "      <td>51.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-04-02</td>\n",
+       "      <td>57258.43</td>\n",
+       "      <td>62.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-04-09</td>\n",
+       "      <td>42960.91</td>\n",
+       "      <td>65.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Store        Date  Weekly_Sales  Temperature\n",
+       "0      1  2010-02-05      24924.50        42.31\n",
+       "1      1  2010-02-12      46039.49        38.51\n",
+       "2      1  2010-02-19      41595.55        39.93\n",
+       "3      1  2010-02-26      19403.54        46.63\n",
+       "4      1  2010-03-05      21827.90        46.50\n",
+       "5      1  2010-03-12      21043.39        57.79\n",
+       "6      1  2010-03-19      22136.64        54.58\n",
+       "7      1  2010-03-26      26229.21        51.45\n",
+       "8      1  2010-04-02      57258.43        62.27\n",
+       "9      1  2010-04-09      42960.91        65.86"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Select the store, date and weekly sales and temperature\n",
+    "sql.read_sql(\"\"\"\n",
+    "select a.Store, a.Date, a.Weekly_Sales, b.Temperature from wm_sales a \n",
+    "join wm_feat b\n",
+    "on a.Store = b.Store and a.Date = b.Date\n",
+    "limit 10\n",
+    "\"\"\", con=connW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AVG(Weekly_Sales)</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15901.445069</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17035.823187</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AVG(Weekly_Sales)  IsHoliday\n",
+       "0       15901.445069          0\n",
+       "1       17035.823187          1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#What were average sales on holiday vs. non-holiday sales\n",
+    "sql.read_sql(\"\"\"\n",
+    "select AVG(Weekly_Sales), IsHoliday from wm_sales\n",
+    "group by IsHoliday\n",
+    "\"\"\", con=connW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AVG(a.Weekly_Sales)</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15275.770307</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15111.471238</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AVG(a.Weekly_Sales)  IsHoliday\n",
+       "0         15275.770307          0\n",
+       "1         15111.471238          1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#What were average sales on holiday vs. non-holiday sales when the temperature was below 32 degrees\n",
+    "sql.read_sql(\"\"\"\n",
+    "select AVG(a.Weekly_Sales), a.IsHoliday from wm_sales a \n",
+    "join wm_feat b\n",
+    "on a.Store = b.Store and a.Date = b.Date\n",
+    "where b.Temperature < 32\n",
+    "group by a.IsHoliday\n",
+    "\"\"\", con=connW)"
    ]
   },
   {
@@ -488,9 +952,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
