--- a/lessons/lesson-17/code/starter-code/starter-code-17.ipynb
+++ b/lessons/lesson-17/code/starter-code/starter-code-17.ipynb
@@ -3,14 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -311,9 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "titles = data['title'].fillna('')\n",
@@ -344,15 +353,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV AUC [ 0.8153153   0.8257859   0.81604862], Average AUC 0.8190499392060214\n"
+      "CV AUC [ 0.81568095  0.82614065  0.81667266], Average AUC 0.819498083831\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rosslewis/anaconda/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
    ],
@@ -385,10 +400,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -401,10 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into a training set\n",
@@ -418,23 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('features', CountVectorizer(analyzer='word', binary=True, decode_error='strict',\n",
-       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "Pipeline(steps=[('features', CountVectorizer(analyzer=u'word', binary=True, decode_error=u'strict',\n",
+       "        dtype=<type 'numpy.int64'>, encoding=u'utf-8', input=u'content',\n",
        "        lowercase=True, max_df=1.0, max_features=1000, min_df=1,\n",
        "        ngram_range=(1, 2), preprocessor=None, stop_words='english',\n",
-       "     ...ty='l1', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "  ...ty='l1', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,24 +459,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.54498618,  0.45501382],\n",
-       "       [ 0.40242714,  0.59757286],\n",
-       "       [ 0.01265358,  0.98734642],\n",
+       "array([[ 0.56165426,  0.43834574],\n",
+       "       [ 0.40240013,  0.59759987],\n",
+       "       [ 0.04640627,  0.95359373],\n",
        "       ..., \n",
-       "       [ 0.29678077,  0.70321923],\n",
-       "       [ 0.61248369,  0.38751631],\n",
-       "       [ 0.63551779,  0.36448221]])"
+       "       [ 0.30003182,  0.69996818],\n",
+       "       [ 0.61328986,  0.38671014],\n",
+       "       [ 0.63533488,  0.36466512]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,24 +494,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "from sklearn.preprocessing import MaxAbsScaler\n",
+    "\n",
+    "scaler = MaxAbsScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.56198074,  0.43801926],\n",
+       "       [ 0.40237228,  0.59762772],\n",
+       "       [ 0.04638751,  0.95361249],\n",
+       "       ..., \n",
+       "       [ 0.3000205 ,  0.6999795 ],\n",
+       "       [ 0.61328497,  0.38671503],\n",
+       "       [ 0.63628678,  0.36371322]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "pipeline = Pipeline([\n",
+    "        ('features', vectorizer),\n",
+    "        ('maxAbsScaler', scaler),\n",
+    "        ('model', model)   \n",
+    "    ])\n",
+    "\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "pipeline.predict_proba(X_new)"
    ]
   },
   {
@@ -528,23 +559,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
